# voicebot_service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json
api/: .env.example  Dockerfile  pyproject.toml
api/app/: config.py  dependencies.py  main.py
api/app/api/routers/: voice.py
api/app/application/use_cases/: text_pipeline.py  voice_pipeline.py
api/app/domain/ports/: asr.py  llm.py  task_store.py  tts.py
api/app/infrastructure/adapters/: redis_task_store.py  triton_tts.py
api/app/schemas/: task.py  voice.py
infra/grafana/dashboards/: voicebot.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/loki/: loki.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/promtail/: promtail.yml
infra/rabbitmq/: rabbitmq.conf
infra/seaweedfs/: s3.json
services/api/: .env.example  Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/routers/: voice.py
services/triton/: Dockerfile
services/triton/mms_tts/: config.pbtxt
services/triton/qwen35_llm/: config.pbtxt
services/triton/qwen35_llm/1/: model.json
services/triton/scripts/: export_mms_tts.py
services/worker/: .env.example  Dockerfile  pyproject.toml
services/worker/app/worker/: main.py
shared/: pyproject.toml
shared/alembic/: env.py
shared/alembic/versions/: 001_initial.py  002_add_output_mode.py
shared/app/: config.py  logging_config.py  metrics.py
shared/app/application/: webhook.py
shared/app/application/use_cases/: text_pipeline.py  voice_pipeline.py
shared/app/domain/ports/: llm.py  message_queue.py  object_storage.py  task_repository.py
shared/app/infrastructure/adapters/: postgres_task_repo.py  rabbitmq_publisher.py  redis_cache.py  seaweedfs.py  triton_asr.py  triton_llm.py  triton_tts.py
shared/app/infrastructure/db/: models.py  session.py
shared/app/schemas/: task.py  voice.py
triton/: .dockerignore  pyproject.toml
triton/mms_tts/1/: model.py
triton/parakeet_asr/: config.pbtxt
triton/parakeet_asr/1/: model.py
triton/scripts/: export_parakeet.py
