[project]
name = "voicebot-dev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Runtime (same as shared/pyproject.toml)
    "fastapi[standard]>=0.115.0",
    "tritonclient[http]>=2.50.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy<2.0.0",
    "pydantic-settings>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "aio-pika>=9.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "structlog>=24.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    # Dev tools
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "slowapi>=0.1.9",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["shared"]
