[project]
name = "voicebot-dev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Dev-only tools (runtime deps live in shared/pyproject.toml)
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["shared", "services/api", "services/worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["shared", "services/api", "services/worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
